<resources>
    <string name="app_name">GillsBlog</string>
    <string name="email">Email</string>
    <string name="welcome_to_gills_blog">Welcome to Gills blog</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="already_have_an_account">Already Have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="todo2">TODO</string>
    <string name="add_description">Add Description</string>
    <string name="post">Post</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="date">Date</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
</resources>
